<resources>
    <string name="app_name">Dr Polstat</string>
    <string name="loginTxt">Login</string>
    <string name="usernameTxt">username</string>
    <string name="passwordTxt">Password</string>
    <string name="login1Text">Daftar sekarang</string>
    <string name="login2Text">Lupa password?</string>
    <string name="completeTxt">complete</string>
    <string name="tanggalDefault">Senin, 0 Desember 2018</string>
    <string name="statusText">Status:</string>
    <string name="jamText">Jam:</string>
    <string name="keluhanText">Keluhan:</string>
    <string name="dokterText">Dokter:</string>
    <string name="disetujuiDefault">disetujui</string>
    <string name="jamDefault">00:00</string>
    <string name="keluhanDefault">Default sebuah keluhan</string>
    <string name="dokterDefault">dr. Default Name</string>
    <string name="emailText">Email</string>
    <string name="namaText">Nama:</string>
</resources>
