<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:background="@drawable/stis">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_bg2"
            android:background="@drawable/button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:hint="@string/emailText"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordTxt"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:background="@drawable/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/loginTxt" />


            <TextView
                android:id="@+id/daftar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login1Text"
                android:textColor="#000000"
                android:textAllCaps="true"
                android:textColorLink="@color/colorAccent"
                android:textSize="16dp" />

            <!--<TextView-->
                <!--android:id="@+id/lupa_password_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="12dp"-->
                <!--android:text="@string/login2Text"-->
                <!--android:textSize="20dp" />-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>